--- a/Hello World .html
+++ b/Hello World .html
@@ -1,10 +1,10 @@
 <! DOCTYPE html>
-<!DOCTYPE html>
 <html>
 	<head>
 		<title>Notre site</title>
 	</head>
 	<body>
+		<h1>Putain ça marche pas</h1>
 	</body>
 </html>
 
